# markdown-viewer

./: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  README.md  build-clang-debug.bat  build-gcc-debug.bat  build-linux.sh  build-macos.sh  generate-icons.bat  package-linux.sh  package-macos.sh  package-windows.bat  test.md  vcpkg.json
.github/actions/bootstrap-vcpkg/: action.yml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: ci.yml  release.yml  security.yml  style.yml
cmake/: Dependencies.cmake  Packaging.cmake
debug/: .gitkeep
docs/: API.md  DEVELOPMENT.md  SECURITY.md
include/markdown/: document.h  file_io.h  html_exporter.h  i18n.h  locale_file_parser.h  markdown_parser.h  path_utils.h  text_utils.h  ui_strings.h
installer/: markdown-viewer.iss
resources/: README.md  markdown-viewer.desktop
resources/locale/en-US/: ui_strings.txt
resources/locale/fr-FR/: ui_strings.txt
resources/locale/pt-BR/: ui_strings.txt
src/app/: markdown_viewer.rc  wx_app.cc
src/core/: file_io.cc  html_exporter.cc  locale_file_parser.cc  markdown_parser.cc  path_utils.cc  text_utils.cc  ui_strings.cc
tests/data/: TEST.md
tests/unit/: file_io_test.cc  html_exporter_test.cc  integration_test.cc  locale_file_parser_test.cc  markdown_parser_test.cc  packaging_test.cc  path_utils_test.cc  text_utils_test.cc  ui_strings_test.cc  wx_app_test.cc
tools/local/: .gitignore  setup-act.bat  setup-act.ps1  test-ci-local.bat  test-ci-local.ps1
